--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.8", features = ["derive"] }
+futures = "0.3.21"
 kuchiki = "0.8.1"
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
