--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,17 @@
 name = "rsspls"
 version = "0.1.0"
 edition = "2021"
+authors = [
+    "Wesley Moore <wes@wezm.net>"
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.8", features = ["derive"] }
 futures = "0.3.21"
 kuchiki = "0.8.1"
 log = "0.4.17"
+pico-args = "0.5.0"
 pretty_env_logger = "0.4.0"
 reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip"] }
 rss = "2.0.1"
@@ -17,3 +20,4 @@ serde = { version = "1.0.137", features = ["derive"] }
 simple-eyre = "0.3.1"
 tokio = { version = "1.19.2", features = ["full"] }
 toml = "0.5.9"
+xdg = "2.4.1"
