--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ authors = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+atomicwrites = "0.3.1"
 futures = "0.3.21"
 kuchiki = "0.8.1"
 log = "0.4.17"
