--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ authors = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anydate = "0.3.0"
 atomicwrites = "0.3.1"
+chrono = "0.4.19"
 futures = "0.3.21"
 kuchiki = "0.8.1"
 log = "0.4.17"
