Only depend on the tokio features we're using
In reality other deps are pulling in other features so it doesn't make a
lot of difference.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,6 @@ reqwest = { version = "0.11.11", default-features = false, features = ["rustls-t
 rss = "2.0.1"
 serde = { version = "1.0.137", features = ["derive"] }
 simple-eyre = "0.3.1"
-tokio = { version = "1.19.2", features = ["full"] }
+tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
 toml = "0.5.9"
 xdg = "2.4.1"
