--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ authors = [
 [dependencies]
 anydate = "0.3.0"
 atomicwrites = "0.3.1"
-chrono = "0.4.19"
-futures = "0.3.21"
+chrono = { version = "0.4.19", default-features = false }
+futures = { version = "0.3.21", default-features = false, features = ["std"] }
 kuchiki = "0.8.1"
 log = "0.4.17"
 pico-args = "0.5.0"
