--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,9 @@ pico-args = "0.5.0"
 pretty_env_logger = "0.4.0"
 reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip"] }
 rss = "2.0.1"
-serde = { version = "1.0.137", features = ["derive"] }
+serde = { version = "1.0.138", features = ["derive"] }
 simple-eyre = "0.3.1"
 tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
 toml = "0.5.9"
+url = "2.2.2"
 xdg = "2.4.1"
