Make crates.io happy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rsspls"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 authors = [
     "Wesley Moore <wes@wezm.net>"
@@ -13,7 +13,7 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 
 description = "Generate RSS feeds from websites"
-keywords = ["rss", "cli", "html", "css", "webpage", "feed"]
+keywords = ["rss", "cli", "html", "webpage", "feed"]
 categories = ["command-line-utilities", "web-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
