--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,12 @@ tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
 toml = "0.5.10"
 url = "2.3.1"
 
+[dependencies.time]
+#version = "0.3.17"
+git = "https://github.com/time-rs/time.git"
+rev = "43862d294546177a331038ff49adf80d87507622"
+features = ["parsing", "formatting", "macros"]
+
 [target.'cfg(windows)'.dependencies]
 dirs = "4.0.0"
 
