--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,12 @@ categories = ["command-line-utilities", "web-programming"]
 [dependencies]
 anydate = "0.4.0"
 atomicwrites = "0.4.0"
+basic-toml = "0.1.2"
 chrono = { version = "0.4.24", default-features = false }
 futures = { version = "0.3.28", default-features = false, features = ["std"] }
 kuchiki = "0.8.1"
 log = "0.4.17"
+mime_guess = { version = "2.0.4", default-features = false }
 pico-args = "0.5.0"
 pretty_env_logger = "0.5.0"
 reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "gzip"] }
@@ -32,7 +34,6 @@ rss = "2.0.3"
 serde = { version = "1.0.159", features = ["derive"] }
 simple-eyre = "0.3.1"
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
-basic-toml = "0.1.2"
 url = "2.3.1"
 
 [dependencies.time]
