--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ log = "0.4.17"
 mime_guess = { version = "2.0.4", default-features = false }
 pico-args = "0.5.0"
 pretty_env_logger = "0.5.0"
-reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "gzip"] }
+reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "gzip", "socks"] }
 rss = "2.0.3"
 serde = { version = "1.0.159", features = ["derive"] }
 simple-eyre = "0.3.1"
