--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ anydate = "0.4.0"
 atomicwrites = "0.4.3"
 basic-toml = "0.1.8"
 chrono = { version = "0.4.35", default-features = false }
+cryptoxide = { version = "0.4.4", features = ["blake2"], default-features = false }
 futures = { version = "0.3.30", default-features = false, features = ["std"] }
 kuchiki = "0.8.1"
 log = "0.4.21"
