--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -57,7 +57,7 @@ task:
 task:
   name: Build (Mac OS)
   macos_instance:
-    image: ghcr.io/cirruslabs/macos-monterey-base:latest
+    image: ghcr.io/cirruslabs/macos-runner:sonoma
   env:
     PATH: "$HOME/.cargo/bin:$HOME/bin:$PATH"
   cargo_cache:
