--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rsspls"
-version = "0.9.0-pre"
+version = "0.9.0"
 edition = "2021"
 authors = [
     "Wesley Moore <wes@wezm.net>"
